<resources>
    <string name="app_name">ccpc</string>
    <string name="conform_password">Conform password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="already_auser_login_here">Already aUser ? login Here</string>
    <string name="enter_user_name">Enter user Name</string>
    <string name="login">login</string>
    <string name="new_user_register_here">New User?Register Here</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>