<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_shade"
    tools:context=".reg">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idusername"
        style="@style/textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_user_name"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idedtusername"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:importantForAutofill="no"
            android:textSize="14sp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idpass"
        style="@style/textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_your_password"
        android:padding="5dp"
        android:layout_below="@id/idusername"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ideditpass"

            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:importantForAutofill="no"
            android:textSize="14sp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conpass"
        style="@style/textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/conform_password"
        android:padding="5dp"

        android:layout_below="@id/idpass"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ideditconpass"

            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:importantForAutofill="no"
            android:textSize="14sp"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ages"
        style="@style/textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:hint="age"
        android:padding="5dp"

        android:layout_below="@id/conpass"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ideditages"

            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:importantForAutofill="no"
            android:textSize="14sp"/>


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ages"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/idlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/already_auser_login_here"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"

        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="11dp"
        android:layout_below="@+id/reg"
        android:layout_centerInParent="true"
        android:foregroundGravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progressbar"
        android:visibility="gone" />
</RelativeLayout>